fix float exp icon on firefox by setting parent position to relative

--- a/style.css
+++ b/style.css
@@ -440,6 +440,7 @@ body{
   padding: 1.5rem;
   font-weight: bold;
   font-size: 1.35rem;
+  position: relative;
 }
 
 .exp-description > a,h1{
